Closed
Bug 1749852
Opened 4 years ago
Closed 4 years ago
Perma gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:531: libmozavcodec.so] Error 1 | ld.lld: error: undefined symbol: ff_libdav1d_decoder
Categories
(Core :: Audio/Video: Playback, defect, P1)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
98 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox96 | --- | unaffected |
| firefox97 | --- | unaffected |
| firefox98 | blocking | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: stransky)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=363913463&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/U3wWOifzSNOa-gwRPVf3ew/runs/0/artifacts/public/logs/live_backing.log
[task 2022-01-12T21:29:39.944Z] 21:29:39 INFO - TEST-PASS | check_textrel | TestResult
[task 2022-01-12T21:29:39.944Z] 21:29:39 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/mfbt/tests'
[task 2022-01-12T21:29:40.037Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/nspr/ds'
[task 2022-01-12T21:29:40.037Z] 21:29:40 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang --sysroot /builds/worker/fetches/sysroot-aarch64-linux-gnu -std=gnu99 --target=aarch64-linux-gnu -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-strict-aliasing -fPIC -ffunction-sections -fdata-sections -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Werror=non-literal-null-conversion -Wstring-conversion -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-psabi -shared -Wl,-z,defs -Wl,--gc-sections -Wl,-h,libplds4.so -o libplds4.so plarena.o plhash.o plvrsion.o -lpthread -fuse-ld=lld -Wl,-rpath-link,/builds/worker/fetches/sysroot-aarch64-linux-gnu/lib/aarch64-linux-gnu -Wl,-rpath-link,/builds/worker/fetches/sysroot-aarch64-linux-gnu/usr/lib/aarch64-linux-gnu -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,nocopyreloc -Wl,-Bsymbolic-functions -Wl,--build-id=sha1 -fstack-protector-strong -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib ../pr/libnspr4.so -ldl
[task 2022-01-12T21:29:40.037Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/nspr/ds'
[task 2022-01-12T21:29:40.071Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/gtk/mozgtk'
[task 2022-01-12T21:29:40.071Z] 21:29:40 INFO - /builds/worker/workspace/obj-build/_virtualenvs/build/bin/python -m mozbuild.action.dumpsymbols /builds/worker/workspace/obj-build/widget/gtk/mozgtk/libmozgtk.so /builds/worker/workspace/obj-build/widget/gtk/mozgtk/libmozgtk.so_syms.track
[task 2022-01-12T21:29:40.071Z] 21:29:40 INFO - Running: /builds/worker/workspace/obj-build/_virtualenvs/build/bin/python /builds/worker/checkouts/gecko/toolkit/crashreporter/tools/symbolstore.py -c --vcs-info --install-manifest=/builds/worker/workspace/obj-build/_build_manifests/install/dist_include,/builds/worker/workspace/obj-build/dist/include -s /builds/worker/checkouts/gecko /builds/worker/fetches/dump_syms/dump_syms /builds/worker/workspace/obj-build/dist/crashreporter-symbols /builds/worker/workspace/obj-build/widget/gtk/mozgtk/libmozgtk.so
[task 2022-01-12T21:29:40.071Z] 21:29:40 INFO - Beginning work for file: /builds/worker/workspace/obj-build/widget/gtk/mozgtk/libmozgtk.so
[task 2022-01-12T21:29:40.071Z] 21:29:40 INFO - Processing file: /builds/worker/workspace/obj-build/widget/gtk/mozgtk/libmozgtk.so
[task 2022-01-12T21:29:40.071Z] 21:29:40 INFO - /builds/worker/fetches/dump_syms/dump_syms /builds/worker/workspace/obj-build/widget/gtk/mozgtk/libmozgtk.so
[task 2022-01-12T21:29:40.071Z] 21:29:40 INFO - Finished processing /builds/worker/workspace/obj-build/widget/gtk/mozgtk/libmozgtk.so in 0.03s
[task 2022-01-12T21:29:40.071Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/widget/gtk/mozgtk'
[task 2022-01-12T21:29:40.120Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/nspr/libc'
[task 2022-01-12T21:29:40.120Z] 21:29:40 INFO - config/external/nspr/libc/libplc4.so
[task 2022-01-12T21:29:40.120Z] 21:29:40 INFO - rm -f libplc4.so
[task 2022-01-12T21:29:40.120Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/nspr/libc'
[task 2022-01-12T21:29:40.210Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/mfbt/tests'
[task 2022-01-12T21:29:40.210Z] 21:29:40 INFO - mfbt/tests/TestRollingMean
[task 2022-01-12T21:29:40.210Z] 21:29:40 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-aarch64-linux-gnu -std=gnu++17 --target=aarch64-linux-gnu -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wenum-compare-conditional -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -o TestRollingMean /builds/worker/workspace/obj-build/mfbt/tests/TestRollingMean.list -lpthread -fuse-ld=lld -Wl,-rpath-link,/builds/worker/fetches/sysroot-aarch64-linux-gnu/lib/aarch64-linux-gnu -Wl,-rpath-link,/builds/worker/fetches/sysroot-aarch64-linux-gnu/usr/lib/aarch64-linux-gnu -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,nocopyreloc -Wl,-Bsymbolic-functions -Wl,--build-id=sha1 -fstack-protector-strong -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib -pie -ldl
[task 2022-01-12T21:29:40.210Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/mfbt/tests'
[task 2022-01-12T21:29:40.215Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/crashreporter/client'
[task 2022-01-12T21:29:40.215Z] 21:29:40 INFO - /builds/worker/workspace/obj-build/_virtualenvs/build/bin/python -m mozbuild.action.dumpsymbols /builds/worker/workspace/obj-build/dist/bin/crashreporter /builds/worker/workspace/obj-build/toolkit/crashreporter/client/crashreporter_syms.track
[task 2022-01-12T21:29:40.215Z] 21:29:40 INFO - Running: /builds/worker/workspace/obj-build/_virtualenvs/build/bin/python /builds/worker/checkouts/gecko/toolkit/crashreporter/tools/symbolstore.py -c --vcs-info --install-manifest=/builds/worker/workspace/obj-build/_build_manifests/install/dist_include,/builds/worker/workspace/obj-build/dist/include -s /builds/worker/checkouts/gecko /builds/worker/fetches/dump_syms/dump_syms /builds/worker/workspace/obj-build/dist/crashreporter-symbols /builds/worker/workspace/obj-build/dist/bin/crashreporter
[task 2022-01-12T21:29:40.215Z] 21:29:40 INFO - Beginning work for file: /builds/worker/workspace/obj-build/dist/bin/crashreporter
[task 2022-01-12T21:29:40.215Z] 21:29:40 INFO - Processing file: /builds/worker/workspace/obj-build/dist/bin/crashreporter
[task 2022-01-12T21:29:40.215Z] 21:29:40 INFO - /builds/worker/fetches/dump_syms/dump_syms /builds/worker/workspace/obj-build/dist/bin/crashreporter
[task 2022-01-12T21:29:40.215Z] 21:29:40 INFO - Finished processing /builds/worker/workspace/obj-build/dist/bin/crashreporter in 0.19s
[task 2022-01-12T21:29:40.215Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/toolkit/crashreporter/client'
[task 2022-01-12T21:29:40.276Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2022-01-12T21:29:40.276Z] 21:29:40 INFO - media/ffvpx/libavcodec/libmozavcodec.so
[task 2022-01-12T21:29:40.276Z] 21:29:40 INFO - rm -f libmozavcodec.so
[task 2022-01-12T21:29:40.276Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2022-01-12T21:29:40.366Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang --sysroot /builds/worker/fetches/sysroot-aarch64-linux-gnu -std=gnu99 --target=aarch64-linux-gnu -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-strict-aliasing -fPIC -ffunction-sections -fdata-sections -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Werror=non-literal-null-conversion -Wstring-conversion -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-psabi -shared -Wl,-z,defs -Wl,--gc-sections -Wl,-h,libmozavcodec.so -o libmozavcodec.so allcodecs.o avcodec.o avdct.o avpacket.o bitstream.o bitstream_filters.o bsf.o codec_desc.o codec_par.o dct.o dct32_fixed.o dct32_float.o decode.o encode.o faandct.o faanidct.o fdctdsp.o fft_fixed_32.o fft_float.o fft_init_table.o flac.o flacdata.o flacdec.o flacdsp.o idctdsp.o jfdctfst.o jfdctint.o jrevdct.o log2_tab.o mpegaudio.o mpegaudiodata.o mpegaudiodec_common.o mpegaudiodec_fixed.o mpegaudiodecheader.o mpegaudiodsp.o mpegaudiodsp_data.o mpegaudiodsp_fixed.o mpegaudiodsp_float.o null_bsf.o options.o parser.o parsers.o pthread.o pthread_frame.o pthread_slice.o rdft.o reverse.o simple_idct.o utils.o vorbis_parser.o xiph.o -lpthread -fuse-ld=lld -Wl,-rpath-link,/builds/worker/fetches/sysroot-aarch64-linux-gnu/lib/aarch64-linux-gnu -Wl,-rpath-link,/builds/worker/fetches/sysroot-aarch64-linux-gnu/usr/lib/aarch64-linux-gnu -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,nocopyreloc -Wl,-Bsymbolic-functions -Wl,--build-id=sha1 -fstack-protector-strong -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib ../libavutil/libmozavutil.so -Wl,--version-script,libmozavcodec.so.symbols -ldl -lm
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - ld.lld: error: undefined symbol: ff_libdav1d_decoder
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> referenced by allcodecs.c:854 (/builds/worker/checkouts/gecko/media/ffvpx/libavcodec/allcodecs.c:854)
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> allcodecs.o:(av_codec_init_static)
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> referenced by allcodecs.c:854 (/builds/worker/checkouts/gecko/media/ffvpx/libavcodec/allcodecs.c:854)
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> allcodecs.o:(av_codec_init_static)
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> referenced by allcodecs.c:855 (/builds/worker/checkouts/gecko/media/ffvpx/libavcodec/allcodecs.c:855)
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> allcodecs.o:(av_codec_init_static)
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> referenced 8 more times
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - ld.lld: error: undefined symbol: ff_av1_decoder
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> referenced by allcodecs.c:854 (/builds/worker/checkouts/gecko/media/ffvpx/libavcodec/allcodecs.c:854)
[task 2022-01-12T21:29:40.367Z] 21:29:40 INFO - >>> allcodecs.o:(av_codec_init_static)
[task 2022-01-12T21:29:40.368Z] 21:29:40 INFO - >>> referenced by allcodecs.c:854 (/builds/worker/checkouts/gecko/media/ffvpx/libavcodec/allcodecs.c:854)
[task 2022-01-12T21:29:40.368Z] 21:29:40 INFO - >>> allcodecs.o:(av_codec_init_static)
[task 2022-01-12T21:29:40.368Z] 21:29:40 INFO - >>> referenced by allcodecs.c:855 (/builds/worker/checkouts/gecko/media/ffvpx/libavcodec/allcodecs.c:855)
[task 2022-01-12T21:29:40.368Z] 21:29:40 INFO - >>> allcodecs.o:(av_codec_init_static)
[task 2022-01-12T21:29:40.368Z] 21:29:40 INFO - >>> referenced 8 more times
[task 2022-01-12T21:29:40.368Z] 21:29:40 INFO - clang-13: error: linker command failed with exit code 1 (use -v to see invocation)
[task 2022-01-12T21:29:40.368Z] 21:29:40 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:531: libmozavcodec.so] Error 1
[task 2022-01-12T21:29:40.368Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2022-01-12T21:29:40.368Z] 21:29:40 ERROR - gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: media/ffvpx/libavcodec/target] Error 2
[task 2022-01-12T21:29:40.368Z] 21:29:40 INFO - gmake[3]: *** Waiting for unfinished jobs....
[task 2022-01-12T21:29:40.379Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/nspr/libc'
[task 2022-01-12T21:29:40.382Z] 21:29:40 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang --sysroot /builds/worker/fetches/sysroot-aarch64-linux-gnu -std=gnu99 --target=aarch64-linux-gnu -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-strict-aliasing -fPIC -ffunction-sections -fdata-sections -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Werror=non-literal-null-conversion -Wstring-conversion -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-psabi -shared -Wl,-z,defs -Wl,--gc-sections -Wl,-h,libplc4.so -o libplc4.so base64.o plerror.o plgetopt.o plvrsion.o strcase.o strcat.o strchr.o strcmp.o strcpy.o strdup.o strlen.o strpbrk.o strstr.o strtok.o -lpthread -fuse-ld=lld -Wl,-rpath-link,/builds/worker/fetches/sysroot-aarch64-linux-gnu/lib/aarch64-linux-gnu -Wl,-rpath-link,/builds/worker/fetches/sysroot-aarch64-linux-gnu/usr/lib/aarch64-linux-gnu -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,nocopyreloc -Wl,-Bsymbolic-functions -Wl,--build-id=sha1 -fstack-protector-strong -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib ../pr/libnspr4.so -ldl
[task 2022-01-12T21:29:40.382Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/nspr/libc'
[task 2022-01-12T21:29:40.388Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/nspr/ds'
[task 2022-01-12T21:29:40.388Z] 21:29:40 INFO - /builds/worker/workspace/obj-build/_virtualenvs/build/bin/python -m mozbuild.action.check_binary --target libplds4.so
[task 2022-01-12T21:29:40.388Z] 21:29:40 INFO - TEST-PASS | check_textrel | libplds4.so
[task 2022-01-12T21:29:40.388Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/nspr/ds'
[task 2022-01-12T21:29:40.396Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/nspr/ds'
[task 2022-01-12T21:29:40.397Z] 21:29:40 INFO - chmod +x libplds4.so
[task 2022-01-12T21:29:40.397Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/nspr/ds'
[task 2022-01-12T21:29:40.404Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/nspr/ds'
[task 2022-01-12T21:29:40.405Z] 21:29:40 INFO - ../../../../config/nsinstall -R -m 644 'libplds4.so' '../../../../dist/bin'
[task 2022-01-12T21:29:40.405Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/nspr/ds'
[task 2022-01-12T21:29:40.461Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/gtk/mozwayland'
[task 2022-01-12T21:29:40.461Z] 21:29:40 INFO - /builds/worker/workspace/obj-build/_virtualenvs/build/bin/python -m mozbuild.action.dumpsymbols /builds/worker/workspace/obj-build/widget/gtk/mozwayland/libmozwayland.so /builds/worker/workspace/obj-build/widget/gtk/mozwayland/libmozwayland.so_syms.track
[task 2022-01-12T21:29:40.461Z] 21:29:40 INFO - Running: /builds/worker/workspace/obj-build/_virtualenvs/build/bin/python /builds/worker/checkouts/gecko/toolkit/crashreporter/tools/symbolstore.py -c --vcs-info --install-manifest=/builds/worker/workspace/obj-build/_build_manifests/install/dist_include,/builds/worker/workspace/obj-build/dist/include -s /builds/worker/checkouts/gecko /builds/worker/fetches/dump_syms/dump_syms /builds/worker/workspace/obj-build/dist/crashreporter-symbols /builds/worker/workspace/obj-build/widget/gtk/mozwayland/libmozwayland.so
[task 2022-01-12T21:29:40.461Z] 21:29:40 INFO - Beginning work for file: /builds/worker/workspace/obj-build/widget/gtk/mozwayland/libmozwayland.so
[task 2022-01-12T21:29:40.461Z] 21:29:40 INFO - Processing file: /builds/worker/workspace/obj-build/widget/gtk/mozwayland/libmozwayland.so
[task 2022-01-12T21:29:40.462Z] 21:29:40 INFO - /builds/worker/fetches/dump_syms/dump_syms /builds/worker/workspace/obj-build/widget/gtk/mozwayland/libmozwayland.so
[task 2022-01-12T21:29:40.462Z] 21:29:40 INFO - Finished processing /builds/worker/workspace/obj-build/widget/gtk/mozwayland/libmozwayland.so in 0.01s
[task 2022-01-12T21:29:40.462Z] 21:29:40 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/widget/gtk/mozwayland'
[task 2022-01-12T21:29:40.512Z] 21:29:40 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/mfbt/tests'
[task 2022-01-12T21:29:40.512Z] 21:29:40 INFO - /builds/worker/workspace/obj-build/_virtualenvs/build/bin/python -m mozbuild.action.check_binary --target TestRollingMean
[task 2022-01-12T21:29:40.512Z] 21:29:40 INFO - TEST-PASS | check_textrel | TestRollingMean
Updated•4 years ago
|
Updated•4 years ago
|
Has Regression Range: --- → yes
Updated•4 years ago
|
Component: General → Audio/Video: Playback
Product: Firefox Build System → Core
Comment 1•4 years ago
|
||
These have now moved to tier1: https://treeherder.mozilla.org/jobs?repo=mozilla-central&group_state=expanded&selectedTaskRun=O3lsv8qySyuLaoyasHp-YA.0&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel
Martin, please take a look.
Flags: needinfo?(stransky)
Summary: Perma [tier2] gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:531: libmozavcodec.so] Error 1 → Perma gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:531: libmozavcodec.so] Error 1
Updated•4 years ago
|
Summary: Perma gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:531: libmozavcodec.so] Error 1 → Perma gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:531: libmozavcodec.so] Error 1 | ld.lld: error: undefined symbol: ff_libdav1d_decoder
| Assignee | ||
Comment 3•4 years ago
|
||
| Assignee | ||
Comment 4•4 years ago
|
||
Updated•4 years ago
|
Keywords: regression
Comment 5•4 years ago
|
||
Set release status flags based on info from the regressing bug 1745285
status-firefox96:
--- → unaffected
status-firefox97:
--- → unaffected
status-firefox98:
--- → affected
status-firefox-esr91:
--- → unaffected
| Comment hidden (Intermittent Failures Robot) |
Can this somehow be expedited? This issue is making it unclear about subsequent patches status.
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 12•4 years ago
|
||
[Tracking Requested - why for this release]: busted tier-1 builds
Updated•4 years ago
|
tracking-firefox97:
? → ---
Comment 13•4 years ago
|
||
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/622a94d93139
[Linux] Don't build VA-API with MOZ_FFVPX_AUDIOONLY r=jhorak
Updated•4 years ago
|
Comment 14•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•