Bug 1749852 [Linux] Don't build VA-API with MOZ_FFVPX_AUDIOONLY r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D135827